// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer > renders copyright 1`] = `
<footer
  class="py-9 text-button-md sm:px-6 print:hidden bg-white text-black"
>
  <div
    class="mx-auto flex flex-col gap-9 sm:max-w-[1090px]"
  >
    <div
      class="mt-9 flex justify-end px-5 sm:px-0"
    >
      © 2024
    </div>
  </div>
</footer>
`;

exports[`Footer > renders footer with dark variant 1`] = `
<footer
  class="py-9 text-button-md sm:px-6 print:hidden bg-black text-white"
>
  <div
    class="mx-auto flex flex-col gap-9 sm:max-w-[1090px]"
  >
    <ul
      class="px-5 sm:px-4"
    >
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 1
        </div>
      </li>
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 2
        </div>
      </li>
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 3
        </div>
      </li>
    </ul>
    <div
      class="flex flex-col gap-6 px-5 sm:flex-row sm:px-0"
    >
      <div>
        Logo 1
      </div>
      <div>
        Logo 2
      </div>
    </div>
    <div
      class="mt-9 flex justify-end px-5 sm:px-0"
    >
      © 2024
    </div>
  </div>
</footer>
`;

exports[`Footer > renders footer with light variant 1`] = `
<footer
  class="py-9 text-button-md sm:px-6 print:hidden bg-white text-black"
>
  <div
    class="mx-auto flex flex-col gap-9 sm:max-w-[1090px]"
  >
    <ul
      class="px-5 sm:px-4"
    >
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 1
        </div>
      </li>
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 2
        </div>
      </li>
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 3
        </div>
      </li>
    </ul>
    <div
      class="flex flex-col gap-6 px-5 sm:flex-row sm:px-0"
    >
      <div>
        Logo 1
      </div>
      <div>
        Logo 2
      </div>
    </div>
    <div
      class="mt-9 flex justify-end px-5 sm:px-0"
    >
      © 2024
    </div>
  </div>
</footer>
`;

exports[`Footer > renders items 1`] = `
<footer
  class="py-9 text-button-md sm:px-6 print:hidden bg-white text-black"
>
  <div
    class="mx-auto flex flex-col gap-9 sm:max-w-[1090px]"
  >
    <ul
      class="px-5 sm:px-4"
    >
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 1
        </div>
      </li>
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 2
        </div>
      </li>
      <li
        class="px-2 py-[6px]"
      >
        <div>
          Item 3
        </div>
      </li>
    </ul>
  </div>
</footer>
`;

exports[`Footer > renders logos 1`] = `
<footer
  class="py-9 text-button-md sm:px-6 print:hidden bg-white text-black"
>
  <div
    class="mx-auto flex flex-col gap-9 sm:max-w-[1090px]"
  >
    <div
      class="flex flex-col gap-6 px-5 sm:flex-row sm:px-0"
    >
      <div>
        Logo 1
      </div>
      <div>
        Logo 2
      </div>
    </div>
  </div>
</footer>
`;
